fix - alignment bug for mobile project page fix - initial slide height on mobile about page
feat - animate about infoslider intro
feat - animate work info new p tag intro
feat - remade work link list marker

--- a/src/Style/About.scss
+++ b/src/Style/About.scss
@@ -324,6 +324,7 @@
       flex-direction: column;
 
       .slide {
+        height: 70px;
         flex-direction: row;
         justify-content: space-between;
         .slideIconWrap {
